--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,6 +13,9 @@ jobs:
       fail-fast: false
       matrix:
         platform: [macos-latest, ubuntu-22.04, windows-latest]
+        include:
+          - platform: macos-latest
+            args: --target universal-apple-darwin
 
     runs-on: ${{ matrix.platform }}
 
@@ -54,4 +57,5 @@ jobs:
           releaseName: 'Stock App v${{ github.ref_name }}'
           releaseBody: '请查看资源以下载并安装此版本。'
           releaseDraft: true
-          prerelease: false 
+          prerelease: false
+          args: ${{ matrix.args }} 
