--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,12 +1,21 @@
 name: '持续集成'
 
 on:
-  push:
-    branches:
-      - master
-  pull_request:
-    branches:
-      - master
+  # 注释掉自动触发条件
+  # push:
+  #   branches:
+  #     - master
+  # pull_request:
+  #   branches:
+  #     - master
+  
+  # 改为只有手动触发
+  workflow_dispatch:
+    inputs:
+      reason:
+        description: '运行原因'
+        required: false
+        default: '手动触发构建'
 
 jobs:
   test-build:
