Remove .NET project files and update .gitignore for IDE and build artifacts
- Deleted .csproj and .sln files for the App.TauriPlugIn as part of project restructuring.
- Removed Class1.cs and global.json files associated with the .NET project.
- Updated .gitignore to exclude .NET build directories and IDE configuration files for Rider/IDEA.

--- a/.gitignore
+++ b/.gitignore
@@ -22,4 +22,11 @@ Thumbs.db
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
 
+# .NET
+src-dotnet/App.TauriPlugIn/bin/
+src-dotnet/App.TauriPlugIn/obj/
+
+# Rider/IDEA
+src-dotnet/App.TauriPlugIn/.idea/
+
 
