Add .NET setup to CI and release workflows
- Integrated .NET setup step in both CI and release workflows to ensure the correct .NET version (8.0.x) is used during builds.
- This addition enhances the build environment for applications that depend on .NET components.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -77,6 +77,11 @@ jobs:
       - name: Install frontend dependencies
         run: bun install
 
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: '8.0.x'
+
       - name: Build the app
         uses: tauri-apps/tauri-action@v0
         env:
