--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -89,5 +89,10 @@ jobs:
       - name: Install frontend dependencies
         run: bun install
 
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: '8.0.x'
+
       - name: Build the app (debug mode)
         run: bun run tauri build --debug
