Update output paths and configuration for .NET integration
- Changed OutputPath in App.TauriPlugIn.csproj to point to 'src-tauri/lib/'.
- Updated .gitignore to exclude 'src-tauri/lib/'.
- Modified resources section in tauri.conf.json to include 'lib/' for asset management.

--- a/src-dotnet/App.TauriPlugIn/App.TauriPlugIn.csproj
+++ b/src-dotnet/App.TauriPlugIn/App.TauriPlugIn.csproj
@@ -4,7 +4,7 @@
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <OutputPath>..\..\src-tauri\dotnet</OutputPath>
+        <OutputPath>..\..\src-tauri\lib</OutputPath>
         <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
         <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
     </PropertyGroup>
