--- a/src-dotnet/App.TauriPlugIn/App.TauriPlugIn.csproj
+++ b/src-dotnet/App.TauriPlugIn/App.TauriPlugIn.csproj
@@ -4,7 +4,7 @@
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <OutputPath>..\..\src-tauri\lib</OutputPath>
+        <OutputPath>..\..\src-tauri\dotnet</OutputPath>
         <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
         <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
     </PropertyGroup>
