--- a/src-dotnet/App.TauriPlugIn/App.TauriPlugIn.csproj
+++ b/src-dotnet/App.TauriPlugIn/App.TauriPlugIn.csproj
@@ -12,4 +12,8 @@
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.1" />
         <PackageReference Include="TauriDotNetBridge" Version="2.2.0" />
     </ItemGroup>
+    <ItemGroup>
+      <Folder Include="Controllers\" />
+      <Folder Include="Models\" />
+    </ItemGroup>
 </Project>
