--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"format": "prettier --write .",
-		"lint": "prettier --check . && eslint ."
+		"lint": "prettier --check . && eslint .",
+		"update-version": "node update-version.js",
+		"tag-and-bump": "node tag-and-bump.js"
 	},
 	"devDependencies": {
 		"@eslint/compat": "^1.2.5",
