Refactor version update process by consolidating scripts and enhancing version increment logic. Removed update-version.js and updated package.json to streamline tagging with a new command. Adjusted tauri.conf.json to eliminate unnecessary version update command in the build process.

--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"format": "prettier --write .",
 		"lint": "prettier --check . && eslint .",
-		"update-version": "node update-version.js",
-		"tag-and-bump": "node tag-and-bump.js"
+		"tag": "node tag-and-bump.js"
 	},
 	"devDependencies": {
 		"@eslint/compat": "^1.2.5",
