新增 .NET 插件启动时避免本地化资源 DLL 报错的说明，更新项目依赖，添加配置文件解析功能，支持读取应用许可证和 API 地址设置。

--- a/src-dotnet/App.TauriPlugIn/App.TauriPlugIn.csproj
+++ b/src-dotnet/App.TauriPlugIn/App.TauriPlugIn.csproj
@@ -9,7 +9,9 @@
         <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
     </PropertyGroup>
     <ItemGroup>
+        <PackageReference Include="ini-parser" Version="2.5.2" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.1" />
+        <PackageReference Include="System.Text.Json" Version="9.0.6" />
         <PackageReference Include="TauriDotNetBridge" Version="2.2.0" />
     </ItemGroup>
     <ItemGroup>
