--- a/src-dotnet/App.TauriPlugIn/App.TauriPlugIn.csproj
+++ b/src-dotnet/App.TauriPlugIn/App.TauriPlugIn.csproj
@@ -18,4 +18,9 @@
       <Folder Include="Controllers\" />
       <Folder Include="Models\" />
     </ItemGroup>
+    <ItemGroup>
+      <None Update="config.ini">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
 </Project>
